# gbce-core

./: Readme.md  pyproject.toml  stock_market.py
gbce/: __init__.py  __main__.py  exchange.py
gbce/models/: enums.py  trade.py
gbce/stocks/: base.py  common.py  preferred.py
