[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[project]
name = "gbce-trading-system"
version = "1.0.0"
description = "GBCE Phase 1 Trading System"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["gbce"]  

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "mypy>=1.0"]
